first review update

--- a/basic_day_order.html
+++ b/basic_day_order.html
@@ -154,7 +154,7 @@
 </head>
 <body>
     <h1>Day Order Web Development Curriculum</h1>
-    <p class="subtitle">3 Month (18-day) intensive course (1.5 hours/day) with 4 projects</p>
+    <p class="subtitle">18-day intensive course (1.5 hours/day) with 4 projects</p>
     
     <table>
         <thead>
@@ -187,53 +187,53 @@
                 <td class="project-title" rowspan="4">School/Portfolio Website</td>
                 <td class="focus-area" rowspan="4"><span class="html-badge">HTML</span> <span class="css-badge">CSS</span> Basics</td>
                 <td class="day-number">2</td>
-                <td class="topic">HTML Document Structure</td>
+                <td class="topic">HTML</td>
                 <td class="details">
-                    • <code>&lt;!DOCTYPE html&gt;</code>, <code>&lt;html&gt;</code>, <code>&lt;head&gt;</code>, <code>&lt;body&gt;</code><br>
-                    • Meta tags (charset, viewport)<br>
-                    • Headings, paragraphs, lists
+                    • HTML Document Structure<br>
+                    • Basic Structure & Introduction <br>
+                    • Core Elements<br>
+                    • Design & Styling <br>
+                    • Content Structuring<br>
+                    • Advanced Embeds & Media
                 </td>
             </tr>
             <tr>
                 <td class="day-number">3</td>
-                <td class="topic">CSS Fundamentals</td>
+                <td class="topic">HTML & CSS</td>
                 <td class="details">
-                    • Color, background-color, fonts<br>
-                    • Text alignment and styling<br>
-                    • Box model (padding, margin, border)
+                    • Multimedia <br>
+                    • Design & Styling <br>
+                    • Basics & Introduction <br>
+                    • Color, Background & Borders <br>
                 </td>
             </tr>
             <tr>
                 <td class="day-number">4</td>
-                <td class="topic">Navigation & Layout</td>
+                <td class="topic">CSS</td>
                 <td class="details">
-                    • Semantic tags (header, nav, section, footer)<br>
-                    • Links and anchor tags<br>
-                    • Flexbox basics (display: flex)
+                    • Box Model & Spacing<br>
+                    • Text & Fonts<br>
+                    • CSS Layout Systems
                 </td>
             </tr>
             <tr>
                 <td class="day-number">5</td>
                 <td class="topic">Project Development</td>
                 <td class="details">
-                    • Build complete school/portfolio website<br>
-                    • Include: Homepage, About, Contact sections<br>
-                    • Prepare for GitHub deployment
-                </td>
+                    • Project Gudidence<br>
+                            </td>
             </tr>
             
             <!-- GitHub Day -->
             <tr class="project-row">
-                <td class="project-title">GitHub Masterclass</td>
+                <td class="project-title">Git & GitHub</td>
                 <td class="focus-area"><span class="git-badge">GitHub</span> <span class="git-badge">Version Control</span></td>
                 <td class="day-number">6</td>
                 <td class="topic">GitHub Fundamentals</td>
                 <td class="details">
                     • GitHub account creation and setup<br>
-                    • Creating repositories (init, clone)<br>
-                    • Basic Git commands (add, commit, push, pull)<br>
-                    • Branching and merging basics<br>
-                    • GitHub Pages deployment<br>
+                                     • Basic Git commands (add, commit, push, pull)<br>
+                                    • GitHub Pages deployment<br>
                     • Deploy Project 1 (School/Portfolio site)<br>
                     • Share live URLs and collaborate
                 </td>
@@ -244,7 +244,7 @@
                 <td class="project-title" rowspan="4">Restaurant/E-commerce</td>
                 <td class="focus-area" rowspan="4"><span class="html-badge">HTML</span> <span class="css-badge">CSS</span> Intermediate</td>
                 <td class="day-number">7</td>
-                <td class="topic">Responsive Design</td>
+                <td class="topic">CSS</td>
                 <td class="details">
                     • Media queries basics<br>
                     • Responsive images (object-fit)<br>
@@ -253,7 +253,7 @@
             </tr>
             <tr>
                 <td class="day-number">8</td>
-                <td class="topic">CSS Grid Layout</td>
+                <td class="topic">CSS</td>
                 <td class="details">
                     • Grid template columns<br>
                     • Grid gap and alignment<br>
