--- a/index.html
+++ b/index.html
@@ -95,15 +95,7 @@
                         <a href="advanced_project.html" target="_blank" class="button">View</a>
                     </td>
                 </tr>
-                <tr>
-                    <td>Sample Code</td>
-                    <td class="basic">
-                        <a href="files/basic_sample_code.zip" download class="button">Download</a>
-                    </td>
-                    <td class="advanced">
-                        <a href="files/advanced_sample_code.zip" download class="button">Download</a>
-                    </td>
-                </tr>
+                
                 
                 <tr>
                     <td>Day Order</td>
@@ -123,6 +115,16 @@
                         <a href="advanced_activities.html" target="_blank" class="button">View</a>
                     </td>
                 </tr>
+
+                <tr>
+                    <td>Sample Code</td>
+                    <td class="basic">
+                        <a href="files/basic_sample_code.zip" download class="button">Download</a>
+                    </td>
+                    <td class="advanced">
+                        <a href="files/advanced_sample_code.zip" download class="button">Download</a>
+                    </td>
+                </tr>
                 <tr>
                     <td>PPT Slides</td>
                     <td class="basic">
@@ -133,7 +135,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Assessments</td>
+                    <td>Practical Assessments</td>
                     <td class="basic">
                         <a href="basic_assessment.html" target="_blank" class="button">View</a>
                     </td>
